[gd_scene load_steps=6 format=3 uid="uid://cjql0ln5bp5jf"]

[ext_resource type="Script" uid="uid://yn6p1ne0pr7b" path="res://inventory/inv_ui.gd" id="1_6mjb6"]
[ext_resource type="Texture2D" uid="uid://c1jn1pfrgs53n" path="res://art_animation/picture/inventory-background.png" id="2_phfsi"]
[ext_resource type="PackedScene" uid="uid://cwtasavct48x6" path="res://inventory/inv_ui_slot.tscn" id="3_xpkj3"]
[ext_resource type="PackedScene" uid="uid://duxhmbil21ruw" path="res://scenes/tutorialgame!.tscn" id="4_r1b7r"]
[ext_resource type="PackedScene" uid="uid://bmvsywjqs64lu" path="res://level/mathcross_level1.tscn" id="5_ars6i"]

[node name="Inv_UI" type="CanvasLayer"]
scale = Vector2(1.00289, 1)
transform = Transform2D(1.00289, 0, 0, 1, 0, 0)
script = ExtResource("1_6mjb6")

[node name="Inv_UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 335.032
offset_top = 3.0
offset_right = 375.032
offset_bottom = 43.0

[node name="NinePatchRect" type="NinePatchRect" parent="Inv_UI"]
layout_mode = 0
offset_right = 87.0
offset_bottom = 64.0
texture = ExtResource("2_phfsi")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="Inv_UI/NinePatchRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.0
offset_top = -28.0
offset_right = 38.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="inv_UI_slot1" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot2" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot3" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot4" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot5" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot6" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot7" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot8" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot9" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot10" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot11" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot12" parent="Inv_UI/NinePatchRect/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="NinePatchRect2" type="NinePatchRect" parent="Inv_UI"]
layout_mode = 0
offset_top = 66.0
offset_right = 87.0
offset_bottom = 86.0
texture = ExtResource("2_phfsi")
patch_margin_left = 6
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 6

[node name="GridContainer" type="GridContainer" parent="Inv_UI/NinePatchRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -8.0
offset_right = 48.5
offset_bottom = 77.0
grow_horizontal = 2
grow_vertical = 2
columns = 4

[node name="inv_UI_slot1" parent="Inv_UI/NinePatchRect2/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot2" parent="Inv_UI/NinePatchRect2/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot3" parent="Inv_UI/NinePatchRect2/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="inv_UI_slot4" parent="Inv_UI/NinePatchRect2/GridContainer" instance=ExtResource("3_xpkj3")]
layout_mode = 2

[node name="ChoiceContainer" type="HBoxContainer" parent="Inv_UI"]
layout_mode = 0
offset_top = 69.0
offset_right = 1614.0
offset_bottom = 420.0
scale = Vector2(0.207529, 0.310855)

[node name="tutorialgame" parent="Inv_UI" instance=ExtResource("4_r1b7r")]
visible = false
layout_mode = 1
offset_left = -1392.0
offset_top = 106.0
offset_right = -1392.0
offset_bottom = 106.0

[node name="mathcross_level1" parent="Inv_UI" instance=ExtResource("5_ars6i")]
visible = false
layout_mode = 1
offset_left = 6.0
offset_top = 107.0
offset_right = 38.0
offset_bottom = 153.0
